      default_disk_label (previously in definitions.sh) and a new function
      create_new_label (factored out from storage_device/label/do_option)
    - add init.d/unsupported previously in partman-base
    - add partman/*_label templates previously in partman-base
    Part of this change was originally suggested by Jérémy Bobbio.

  [ Colin Watson ]
  * Quote $(FS_DEPENDS) in dh_gencontrol arguments to avoid gotcha when
    adding extra items to it.

 -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 18:22:23 +0100

partman-partitioning (53) unstable; urgency=low

  [ Max Vozeler ]
  * Replace code to commit partman changes to disk with call to commit_changes
    from partman-base (>= 113). We can't add the versioned dependency because
    -base depends on -partitioning, which would be circular.

  [ Updated translations ]
  * Belarusian (be.po) by Hleb Rubanau
  * Dzongkha (dz.po) by Jurmey Rabgay
  * Esperanto (eo.po) by Serge Leblanc
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Korean (ko.po) by Sunjae Park
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Norwegian Bokmål (nb.po) by Hans Fredrik Nordhaug
  * Polish (pl.po) by Bartosz Fenski
  * Romanian (ro.po) by Eddy Petrișor
  * Slovak (sk.po) by Ivan Masár
  * Tamil (ta.po) by Dr.T.Vasudevan

 -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 13:23:10 +0100

partman-partitioning (52) unstable; urgency=low

  * Use 'mkdir -p' rather than more awkward test-then-create constructions.
  * Warn if you try to set the bootable flag on a logical partition, which
    usually does not make sense and can cause problems, but could be useful
    with some boot managers.

  [ Updated translations ]
  * Bulgarian (bg.po) by Damyan Ivanov
  * Bengali (bn.po) by Jamil Ahmed
  * Catalan (ca.po) by Jordi Mallach
  * Czech (cs.po) by Miroslav Kure
  * German (de.po) by Jens Seidel
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier