@@ -17,7 +17,7 @@ if [ "$RET" = false ]; then
 fi
 db_reset partman-partitioning/confirm_new_label
 
-create_new_label "$dev"
+create_new_label "$dev" ""
 
 partitions=''
 open_dialog PARTITIONS
